--- a/src/main/webapp/pages/teama_login/ChangePassword.htm
+++ b/src/main/webapp/pages/teama_login/ChangePassword.htm
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	
+    <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="../../dist/css/sb-admin-2.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <script src="../js/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <link href="../../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <script src="../../js/commonResources.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
 	<title>Change Password</title>
 	<style type="text/css">
@@ -195,7 +195,7 @@
         	  			var data1 = $scope.newPassword;
         	  			var data2 = $scope.token;
             	        var promise = $http({
-            	            url: 'http://localhost:8089/MyRestDemo/rest/login/saveNewPassword',    	        
+            	            url: BASE_PATH + '/service/login/saveNewPassword',    	        
             	            method: 'POST',
             	            headers: { 'Content-Type': 'text/plain' },
             	            data: {
