--- a/src/main/webapp/pages/teama_login/Dashboard.html
+++ b/src/main/webapp/pages/teama_login/Dashboard.html
@@ -333,6 +333,7 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
+    <script src="../../js/commonResources.js"></script>
     <script src="../../vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
