--- a/src/main/webapp/pages/teama_login/ForgotPassword.htm
+++ b/src/main/webapp/pages/teama_login/ForgotPassword.htm
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-
+	<script src="../../js/commonResources.js"></script>
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="../../dist/css/sb-admin-2.css" rel="stylesheet">
@@ -193,7 +193,7 @@
     	    	}
     	  		else{
     	    		var promise = $http({
-        	            url: 'http://localhost:8089/MyRestDemo/rest/login/forgotPassword',    	        
+        	            url: BASE_PATH + '/service/login/forgotPassword',    	        
         	            method: 'POST',
         	            headers: { 'Content-Type': 'text/plain' },
         	            data: {
