--- a/src/main/webapp/pages/teama_login/NeedHelp.html
+++ b/src/main/webapp/pages/teama_login/NeedHelp.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
-    
+    <script src="../../js/commonResources.js"></script>
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="../../dist/css/sb-admin-2.css" rel="stylesheet">
