--- a/src/main/webapp/pages/teama_login/HomePage.html
+++ b/src/main/webapp/pages/teama_login/HomePage.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 	
-	
+	<script src="../../js/commonResources.js"></script>
 	<link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="../../dist/css/sb-admin-2.css" rel="stylesheet">
@@ -474,7 +474,7 @@
 			console.log("controller loaded");
 		    $scope.UserNameMod = "";
 		    $scope.PasswordMod = "";
-		    
+		    console.log(BASE_PATH);
 		    $scope.LoginClick = function () {
 		        console.log("Clicked");
 		        
@@ -486,7 +486,7 @@
 		                password: $scope.PasswordMod
 		            }           
 		            var promise = $http({
-		                url: 'http://localhost:8089/MyRestDemo/rest/login/checkCredentials',
+		                url: BASE_PATH + '/service/login/checkCredentials',
 		                method: 'POST',
 		                headers: { 'Content-Type': 'text/plain' },
 		                data: {
