--- a/src/main/webapp/pages/teama_login/SignupUser.htm
+++ b/src/main/webapp/pages/teama_login/SignupUser.htm
@@ -14,7 +14,7 @@
     <!-- Custom Fonts -->
     <link href="../../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    
+    <script src="../../js/commonResources.js"></script>
 	<title>Signup Page For Customer</title>
 	
 	<style type="text/css">
@@ -286,7 +286,7 @@
 		    		        }
 		    		    	console.log(data);
 		    		    	var promise = $http({
-		    		            url: 'http://localhost:8089/MyRestDemo/rest/login/signupUser/',
+		    		            url: BASE_PATH + '/service/login/signupUser/',
 		    		            method: 'POST',
 		    		            headers: { 'Content-Type': 'text/plain' },
 		    		            data: {
