--- a/src/main/webapp/pages/teamG_Accounting/coaList.html
+++ b/src/main/webapp/pages/teamG_Accounting/coaList.html
@@ -45,7 +45,7 @@
 				</tbody>
 			</table>
 			<h2 ng-hide="coaList.length">Chart of Accounts not found</h2><center>
-			<input type='submit' id='deleteButton' value='Delete Selected Accounts'>
+			<!-- <input type='submit' id='deleteButton' value='Delete Selected Accounts'> -->
 			<a href='#addCOA'><input type="button" value="Add Chart of Accounts" /></a><br>
 			</center>
 			<!-- </form> -->
