--- a/src/main/webapp/pages/teamG_Accounting/addCoaResult.html
+++ b/src/main/webapp/pages/teamG_Accounting/addCoaResult.html
@@ -39,6 +39,7 @@
 				<tr><th>SWIFT ID</th><td>{{productSwiftID}}</td></tr>
 				</tbody>
 			</table>
+			<a href="" ng-click="callCoaList()">Back to Chart Of Accounts</a>
 			</div>
 			</div>
 <!-- <fieldset  align="center">
