link bank table

--- a/src/main/webapp/pages/teamG_Accounting/coaList.html
+++ b/src/main/webapp/pages/teamG_Accounting/coaList.html
@@ -46,6 +46,7 @@
 			</table>
 			<h2 ng-hide="coaList.length">Chart of Accounts not found</h2><center>
 			<!-- <input type='submit' id='deleteButton' value='Delete Selected Accounts'> -->
+			<button ng-click="addCoaPage()">Add Chart of Accounts</button>
 			<a href='#addCOA'><input type="button" value="Add Chart of Accounts" /></a><br>
 			</center>
 			<!-- </form> -->
