fixed java error messages and form validations

--- a/src/main/webapp/pages/teama_login/AccountDetails.html
+++ b/src/main/webapp/pages/teama_login/AccountDetails.html
@@ -265,8 +265,10 @@
                                     </div>
                                     <div class = "col-sm-offset-1 col-sm-7" style="color:#333; background-color: #f7f7f7; border-radius: 20px;">
                                       <b><h4>
-                                        Name: {{sessionUsername}}<br>
-         								Type: {{sessionUsertype}}                               
+                                      	
+                                        <p>Name: {{sessionUsername}}</p>
+                                        <br>
+         								<p>Type: {{sessionUsertype}}</p>                               
          							  </h4></b>
                                     </div>
                                 </div>
