fixed java error messages and form validations for home page

--- a/src/main/webapp/pages/teama_login/ChangePassword.htm
+++ b/src/main/webapp/pages/teama_login/ChangePassword.htm
@@ -203,10 +203,17 @@
             	                token:data2
             	            }
             	        })
-            	        promise.then(function(){
-            	        	alert("we will call the service to chnage password in database");
-            	        	$scope.newPassword="";    	  	
-            	    	  	$scope.confirmPassword="";
+            	        promise.then(function(response){
+            	        	if (response.data = "LoggedInSuccessfully") {
+            	        		alert("We will call the service to chnage password in database");
+                	        	$scope.newPassword="";    	  	
+                	    	  	$scope.confirmPassword="";
+            	        	} else if (response.data = "LinkGotExpired") {
+            	        		alert("This link got expired!");
+                	        	$scope.newPassword="";    	  	
+                	    	  	$scope.confirmPassword="";
+            	        	}
+            	        	
             	        }, function(response) {
             	        	alert("some error occured");
             	        	$scope.newPassword="";    	  	
