Swift page changes

--- a/src/main/webapp/pages/teamd_payments/pendingTransaction.html
+++ b/src/main/webapp/pages/teamd_payments/pendingTransaction.html
@@ -291,7 +291,7 @@
     <div style="margin-top: 10px">
         <div class="row">
             <div class="col-sm-offset-1 col-sm-8 jumbotron" id="alignMain" style="padding-top:0px; 
-            height:1100px; 
+            height:70%; 
             border-radius: 20px; 
             text-align: center; 
             background-color:#555">
