--- a/src/main/webapp/pages/teamd_payments/paymentDetails.html
+++ b/src/main/webapp/pages/teamd_payments/paymentDetails.html
@@ -296,7 +296,11 @@
 
     <div style="margin-top: 10px">
         <div class="row">
-            <div class="col-sm-offset-1 col-sm-8 jumbotron" id="alignMain" >
+            <div class="col-sm-offset-1 col-sm-8 jumbotron" id="alignMain" style="padding-top:0px; 
+            height:70%; 
+            border-radius: 20px; 
+            text-align: center; 
+            background-color:#555">
 
              <div class="row">
                 <div class="col-sm-12" style="background-color:#337ab7; b
