--- a/src/main/webapp/pages/teamb_contract1/ListResponses.html
+++ b/src/main/webapp/pages/teamb_contract1/ListResponses.html
@@ -13,19 +13,19 @@
     <title>SUPPLIER'S RESPONSE</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <!-- Bootstrap Core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+    <link href="../../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="../../dist/css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
-    <link href="../vendor/morrisjs/morris.css" rel="stylesheet">
+    <link href="../../vendor/morrisjs/morris.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -407,7 +407,7 @@
 
                 //console.log(str);
             
-                $http.get("http://localhost:8089/teamB/view/all/responses/"+pid).then(function(response){
+                $http.get("http://localhost:8089/scm/service/view/all/responses/"+pid).then(function(response){
                     $scope.obj = response.data;
                 });
 
@@ -424,7 +424,7 @@
 
 
                      window.alert("Proposal Inactivated!!!");
-                     $http.get("http://localhost:8089/teamB/view/proposal/inactivate/"+pid).then(function(response){
+                     $http.get("http://localhost:8089/scm/service/view/proposal/inactivate/"+pid).then(function(response){
                     $scope.obj = response.data;
                 });
                      window.location = "ListResponses.html?pid="+pid;
