--- a/src/main/webapp/pages/teamd_payments/pendingTransaction.html
+++ b/src/main/webapp/pages/teamd_payments/pendingTransaction.html
@@ -25,7 +25,14 @@
 
     <!-- Custom Fonts -->
     <link href="../../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+  	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+ 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
 
+  <!-- Angular Material Library -->
+  	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+    
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -393,7 +400,7 @@
             <script src="../../dist/js/sb-admin-2.js"></script>
 
 			<script>
-			 var app = angular.module('PendingTransaction', []);
+			 var app = angular.module('PendingTransaction', ['ngMaterial']);
 			app.controller('PendingTransactionController', function($scope, $http){
 			
                 $http.get("http://localhost:8089/scm/service/Transactions/getAllPendingTransactions").then(function(response){
