aur bhi zyada changes

--- a/src/main/webapp/pages/teame_funding/libor.html
+++ b/src/main/webapp/pages/teame_funding/libor.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    <script type="text/javascript" src="../../../../js/libor.js"></script>
+    <script type="text/javascript" src="../../js/libor.js"></script>
 
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
