--- a/src/main/webapp/pages/teame_funding/porderlist_bankuser.html
+++ b/src/main/webapp/pages/teame_funding/porderlist_bankuser.html
@@ -116,7 +116,7 @@ opacity: 0.9;
     </style>
 </head>
 
-<body  ng-app="list_of_PO" ng-controller="POList_Ctrl">
+<body  ng-app="list_of_PO" ng-controller="POList_Ctrl" ng-init="porderFetch()">
 
     <div id="wrapper">
 
