--- a/src/main/webapp/pages/team h/index.html
+++ b/src/main/webapp/pages/team h/index.html
@@ -24,7 +24,7 @@
     <link href="h.resources/font-awesome.min.css" rel="stylesheet" type="text/css">
     
     <script src="https://use.fontawesome.com/caba7b4681.js"></script>
-    <script src="../js/commonResources.js"></script>
+    <script src="h.resources/commonResources.js"></script>
     
     <style type="text/css">
         a.UserName
