--- a/src/main/webapp/pages/team h/features.htm
+++ b/src/main/webapp/pages/team h/features.htm
@@ -15,10 +15,11 @@
 											<th>Feature ID</th>
 											<th>Feature-Name</th>
 											<th>Priority_order</th>
+											<th>Cost</th>
 											<th>A</th>
 											<th>C</th>
 											<th>N</th>
-											<th>Cost</th>
+											
 											</tr>
 										</thead>
 											<tr ng-repeat="i in features">
@@ -27,10 +28,12 @@
 												<td>{{i.f_id}}</td>
 												<td>{{i.feature_name}}</td>
 												<td>{{i.priority_order}}</td>
+												<td><input type="text" id="cost{{$index + 1}}" value=0 style="display:block ; width:20px" />	
 												<td><input type="radio" value="A{{$index + 1 }}" name="{{ $index + 1 }}" ng-click="update(i.p_id,i.f_id,'A', $index+1)"/></td>
 												<td><input type="radio" value="C{{$index + 1 }}" name="{{ $index + 1 }}" ng-click="update(i.p_id,i.f_id,'C', $index+1)"/></td>
 												<td><input type="radio" value="N{{$index + 1 }}" name="{{ $index + 1 }}" ng-click="update(i.p_id,i.f_id,'N' ,$index+1)"/></td>
-												<td><input type="text" id="cost{{$index + 1}}" style="display:block" /></tr>				
+												</tr>
+												<!-- //<td><input type="text" id="cost{{$index + 1}}" style="display:block" /></tr>	 -->			
 									</table>
 								</div>
 						</div>
