--- a/src/main/webapp/pages/teamd_payments/swiftMT103.html
+++ b/src/main/webapp/pages/teamd_payments/swiftMT103.html
@@ -579,7 +579,7 @@ label {
 <script>
 
 	
-	var app = angular.module('swftapp', ['ngMaterial']);
+	var app = angular.module('swftapp', []);
 
 	app.controller('swftctrl', function($scope, $http){
 		$scope.v2 = true; $scope.v1=false;
