--- a/src/main/webapp/pages/invoice/InvoiceDeleteConfirm.html
+++ b/src/main/webapp/pages/invoice/InvoiceDeleteConfirm.html
@@ -1,13 +1,10 @@
  <div ng-app="invoiceApp" ng-controller="mainController">
- <input ng-model="invoiceNo">
+ BillBook Number<input type="text" ng-model="billBookNo" required/>
  <button ng-click="deletefunc()">Search</button>
-     <div ><b>Delete Invoice</b></div>
  </br>
- </br>
- 		<div>
+	<div>
  		<fieldset>
    			<legend><b>Invoices Details</b></legend>
-   			</br>
  			<table border=1 class="table table-striped table-bordered table-hover">
 				<tr><td>Invoice No:&emsp;</td><td>{{invoice.invoiceID}}&emsp;&emsp;&emsp;&emsp;</td><td>Bill Book No:&emsp;</td><td>{{invoice.billbookNo}}</td></tr>
 
@@ -16,21 +13,15 @@
 				<tr><td>Invoice Created Date:&emsp;</td><td>{{invoice.invoiceCreatedDate}}&emsp;&emsp;&emsp;&emsp;</td><td>Payment Date:&emsp;</td><td>{{invoice.paymentDate}}</td></tr>
                 <tr><td>Invoice Due Date:&emsp;</td><td>{{invoice.invoiceDueDate}}&emsp;&emsp;&emsp;&emsp;</td><td></td><td></td></tr>
 			</table>
-			</br>
 
    		</fieldset>
-   		</br>
-   		</br>
    		<fieldset>
    			<legend><b>Product Details</b></legend>
-   			</br>
-   			</br>
    			<table  border=1 class="table table-striped table-bordered table-hover">
    					<tr>
 
    						<th>Product Id</th>
    						<th>Quantity</th>
-   						<th>Unit Price</th>
    						<th> Unit Tax</th>
    						<th>Gross Amount</th>
    						<th>Tax</th>
@@ -39,7 +30,6 @@
    					<tr ng-repeat="p in productslist">
    						<td>{{p.productID}}</td>
    						<td>{{p.quantity}}</td>
-   						<td>{{p.unitprice}}</td>
    						<td>{{p.tax}}</td>
    						<td>{{p.grossAmount}}</td>
    						<td>{{p.tax +p.grossAmount}}</td>
@@ -47,10 +37,7 @@
                     </tr>
                     <tr><td colspan="5" border="0"></td><td><b>Total</b></td><td>{{invoice.invoiceAmount}}</td></tr>
    				</table>
-   				</br>
    				</fieldset>
-   				</br>
-   				</br>
             <button ng-click="deleteresultfunc()">Delete</button>
    		</div>
 </div>
