--- a/src/main/webapp/pages/invoice/InvoiceUpdate.html
+++ b/src/main/webapp/pages/invoice/InvoiceUpdate.html
@@ -1,7 +1,7 @@
   <div ng-app="invoiceApp" ng-controller="mainController">
     
   
-    	Invoice NO<input type="text" ng-model="invoiceNo" required/>
+    	BillBook Number<input type="text" ng-model="billBookNo" required/>
         <button type="submit" ng-click="updateSearchfunc()">Search Invoice</button>
 
         <div>
@@ -40,7 +40,7 @@
    						<td>{{p.tax +p.grossAmount}}</td>
    						<td>{{p.netAmount}}</td>
                     </tr>
-                    <tr><td colspan="5" border="0"></td><td><b>Total</b></td><td>{{invoice.invoiceAmount}}</td></tr>
+                    <tr><td colspan="4" border="0"></td><td><b>Total</b></td><td>{{invoice.invoiceAmount}}</td></tr>
    				</table>
    				</br>
    				<input type="text" ng-model="delProductId" placeholder="Enter Product Id to delete"/>
@@ -54,16 +54,21 @@
    			</br>
    			<table  border=1 class="table table-striped table-bordered table-hover">
    					<tr>
-   						<th>Product Id</th>
-   						<th>Quantity</th>
-   					</tr>
-   					<tr>
-   					<td><input type="text" ng-model="productID"></td>
-   					<td><input type="text" ng-model="quantity"></td>
-                    </tr>
-   				</table>
+                <td>
+                     <select ng-model="selectedProduct">
+                        <option value="">Select Product</option>
+                        <option ng-repeat="p in productlist" value="{{p.product_id}}">
+                            {{p.product_id}}
+                        </option>
+                    </select>
+                </td>
+                <td>
+                    <input type="text" ng-model="quantity" required>
+                </td>
+            </tr>
+   		</table>
    				</br>
-   				</fieldset>
+   		 </fieldset>
  				<button ng-click="addItemFunc()">Add Product</button>
  				
         </div>
