--- a/src/main/webapp/pages/team h/index.html
+++ b/src/main/webapp/pages/team h/index.html
@@ -66,9 +66,10 @@
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
 		
-		<div class="col-xs-1" style="margin-top: 5px; margin-left: 1060px">
+		<!-- <div class="col-xs-1" style="margin-top: 5px; margin-left: 1060px">
+			<input class="form-control" type="text" id="id" />
 			<input class="form-control" type="text" ng-model="seller_id" id="seller_id" name="seller_id" />
-		</div>
+		</div> -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
